--- a/index.html
+++ b/index.html
@@ -390,8 +390,8 @@
   <header class="masthead">
     <div class="masthead-inner">
       <div class="avatar-wrap">
-        <!-- Replace src with your actual photo path, e.g. src="photo.jpg" -->
-        <div class="avatar-placeholder">Your photo<br/>here<br/>(photo.jpg)</div>
+        <!-- Replace src with your actual photo path, e.g. src="photo.jpeg" -->
+        <div class="avatar-placeholder">Your photo<br/>here<br/>(photo.jpeg)</div>
       </div>
       <div class="masthead-text">
         <h1>Your Name</h1>
