--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
     <div class="masthead-inner">
       <div class="avatar-wrap">
         <!-- Replace src with your actual photo path, e.g. src="photo.jpeg" -->
-        <div class="avatar-placeholder">Your photo<br/>here<br/>(photo.jpeg)</div>
+        <img src="photo.jpeg" alt="Your Name" class="avatar">
       </div>
       <div class="masthead-text">
         <h1>Your Name</h1>
